Added display of and movement through layers

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
+<html lang="en">
+	<head>
+		<title> Maze Game </title>
+		<meta charset = "utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- <link rel="stylesheet" href="tamStyle.css"> -->
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Quattrocento" rel="stylesheet">
+		<link rel="stylesheet" href="maze.css">
+		<!-- <script src="../p5/p5.min.js"></script> -->
+	</head>
+	<body>
+		<div id="main">
 
- <!DOCTYPE html>
-<html>
-  <head>
-    <title>Maze Generation</title>
-    <meta charset="utf-8"/>
-  </head>
-  <body>
-    <script src="MazeGen.js"></script> 
-  </body>
-</html> 
+		</div>
+		<script src="maze.js"></script>
+	</body>
+</html>
