Re-try of 'movement and simple looks'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div id="main">
-
+			<p id="invalidMove"> Can't go there! </p>
 		</div>
 		<script src="maze.js"></script>
 	</body>
