--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div id="main">
 			<p id="invalidMove"> Can't go there! </p>
 		</div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="maze.js"></script>
 	</body>
 </html>
