--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	</head>
 	<body>
 		<div id="main">
-			<p id="invalidMove"> Can't go there! </p>
+      <p id="invalidMove"> Can't go there! </p>
+      <p id="time"></p>
 		</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="maze.js"></script>
