--- a/index.html
+++ b/index.html
@@ -10,29 +10,20 @@
 		<!-- <script src="../p5/p5.min.js"></script> -->
 	</head>
 	<body>
-<<<<<<< HEAD
-    <!--<div style="display: table; height: 400px; overflow: hidden;">
-      <div style="display: table-cell; vertical-align: middle;">
-        <div>
-          everything is vertically centered in modern IE8+ and others.
-        </div>
-      </div>
-    </div>-->
     <div id="GUI-header"> 
       <div style="display: table-cell; vertical-align: middle;">
+        <p>Level:</p>
+        <p id="level"></p>
+        <p>|</p>
+        <p>Time:</p>
+        <p id="time"></p>
+        <p>|</p>
 			  <p id="invalidMove"> Can't go there! </p>
       </div>
     </div>
 	  <div id="main">
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-=======
-		<div id="main">
-      		<p id="invalidMove"> Can't go there! </p>
-      		<p id="time"></p>
-		</div>
-    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
->>>>>>> master
 		<script src="maze.js"></script>
 	</body>
 </html>
