--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       		<p id="invalidMove"> Can't go there! </p>
       		<p id="time"></p>
 		</div>
+		<div id="descr">
+			
+		</div>
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="maze.js"></script>
 	</body>
